`change` event for input[type=file] does not fire when different file with same name is selected https://bugs.webkit.org/show_bug.cgi?id=187084 rdar://98460303

Reviewed by Ryosuke Niwa.

When a different file with the same name as the currently selected file is selected,
the `change` event does not currently fire, because a file's path is it's
identifier, so the two files are considered the same by the system.

This PR works around this by saving each file's unique id and then comparing the files
both based on their name and now their id too.

* Source/WebCore/fileapi/File.cpp:
(WebCore::File::create):
(WebCore::File::File):
* Source/WebCore/fileapi/File.h:
* Source/WebCore/html/FileInputType.cpp:
(WebCore::FileInputType::setFiles):
* Source/WebCore/platform/FileChooser.cpp:
(WebCore::FileChooser::chooseFiles):

Canonical link: https://commits.webkit.org/255209@main